# stellar-shipping-collateral

./: README.md
backend/: .env.example  .gitignore  AGENTS.md  Dockerfile  docker-compose.yml  eslint.config.mjs  nest-cli.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.build.json  tsconfig.json
backend/config/: REQUIRED.MD
backend/docs/: auth.md  backend.md  dfns.md  rwa.md  sumsub.md
backend/prisma/: dump.sql  export.ts  schema.prisma  seed-data.json  seed.ts
backend/scripts/: list-end-users.ts  list-wallets.ts
backend/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts  prisma.service.ts
contract/: .env.example  .gitignore  AGENTS.md  Makefile  test_out.txt
contract/contracts/factory/: Cargo.toml
contract/contracts/factory/src/: errors.rs  events.rs  external.rs  interface.rs  lib.rs  storage.rs  test.rs  token.rs  types.rs
contract/contracts/sep57/: Cargo.toml
contract/contracts/sep57/src/: errors.rs  events.rs  external.rs  interface.rs  lib.rs  storage.rs  test.rs  types.rs
frontend/: auth.ts  components.json  design.md  package.json  pnpm-lock.yaml  proxy.ts  tokens.css
frontend/.hallmark/: log.json
frontend/app/: globals.css  landing.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
frontend/components/: query-provider.tsx  theme-provider.tsx
frontend/docs/: auth.md  dfns.md  frontend.md  sumsub.md
frontend/hooks/: use-token-refresh.ts  use-wallet.ts
scripts/: .env.example  README.md  create_rwa_token.json  invoke_args.sh  package.json  pnpm-lock.yaml  tsconfig.json
(+134 files in other folders)
