[package]
name = "sep57"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
compliance = { path = "../compliance" }
identity-verifier = { path = "../identity-verifier" }
soroban-sdk = { workspace = true }

[dev-dependencies]
compliance = { path = "../compliance" }
identity-verifier = { path = "../identity-verifier" }
soroban-sdk = { workspace = true, features = ["testutils"] }
